--- a/personal_website/src/App.css
+++ b/personal_website/src/App.css
@@ -7,6 +7,8 @@
   --transition-speed: 0.2s;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Inter:wght@400;500;600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
